<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="accept_and_continue">Agree and Continue</string>
    <string name="accessibility">accessibility</string>
    <string name="account_cancellation_title">Cancellation Instructions</string>
    <string name="activate_cellular">Activate with Mobile Data</string>
    <string name="activate_dlg_negative">Cancel</string>
    <string name="activate_dlg_positive">Retry</string>
    <string name="activate_failed_cellular">Activation failed. Please ensure your SIM card has a valid data subscription</string>
    <string name="activate_failed_wifi">Activation failed. Please ensure your phone is connected to an WLAN network.</string>
    <string name="activate_title">Activation</string>
    <string name="activate_wifi">Activate with WLAN</string>
    <string name="activity_account">Ocean Account</string>
    <string name="activity_assistant">DouBao Assistant</string>
    <string name="activity_completed">Completed</string>
    <string name="activity_default">Default page</string>
    <string name="activity_language_selection">Select language</string>
    <string name="activity_license">License</string>
    <string name="activity_lock_screen">Lock Screen Mode</string>
    <string name="activity_service">Recommended Services</string>
    <string name="agree">同意</string>
    <string name="ai_data_title">Memory Data</string>
    <string name="ai_data_title_detail">Memory Data is a system service that provides functionalities such as system power consumption prediction. To deliver this service, this application (including AIAgent services) and its underlying services require internet connectivity and request the following permissions: access to calendar, call logs, contacts, location information in both foreground and background, SMS, the list of installed applications, and media data (such as photos, videos, and audio). Enabling this service will also activate the location-sharing feature.</string>
    <string name="androidx_startup">androidx.startup</string>
    <string name="app_name">Provision</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="assistant_subtitle_0">Say doubaodoubao at any time, and the assistant can help you</string>
    <string name="assistant_subtitle_1">Activate Voice Assistant</string>
    <string name="assistant_subtitle_2">Activate the voice assistant or interact with the assistant through keyboard input</string>
    <string name="assistant_subtitle_doubao">Wake with \"DouBao DouBao\", supports video calls, screen or photo Q&amp;A, deep thinking. Answers questions and chats on any topic.</string>
    <string name="assistant_title_0">Voice wake-up</string>
    <string name="assistant_title_1">Long press the AI button</string>
    <string name="assistant_title_2">Long press or click the bottom bar</string>
    <string name="assistant_title_doubao">Assistant via side button</string>
    <string name="auto_install_log">安装信息</string>
    <string name="auto_install_tips">安装包下载完成，点击“立即安装”退出应用并开始安装新版本</string>
    <string name="auto_install_title">安装新版本</string>
    <string name="auto_progress_title">下载更新</string>
    <string name="auto_update_cancel">稍后提醒</string>
    <string name="auto_update_install">立即安装</string>
    <string name="auto_update_log">更新说明</string>
    <string name="auto_update_ok">立即更新</string>
    <string name="auto_update_tip_mobile">安装包大小为 %1$s，现在使用数据流量下载可能会产生费用，是否更新到最新版本？</string>
    <string name="auto_update_tip_mobile_force">您需要升级到此版本才能继续使用，安装包大小为 %1$s，现在使用数据流量下载可能会产生费用，是否立即更新？</string>
    <string name="auto_update_tip_wifi">安装包大小为 %1$s，是否更新到最新版本？</string>
    <string name="auto_update_tip_wifi_force">安装包大小为 %1$s，您需要升级到此版本才能继续使用。</string>
    <string name="auto_update_title">发现新版本</string>
    <string name="auto_update_version">版本: %1$s</string>
    <string name="basic_services_policy">Basic Services</string>
    <string name="basic_services_policy_sub">Based on your explicit authorization, we may read media audio and video data, read location information, and read or write calendar information.</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="bottomsheet_action_expand_halfway">Expand halfway</string>
    <string name="cancel">不同意并退出</string>
    <string name="cancel_only">取消</string>
    <string name="character_counter_content_description">Characters entered %1$d of %2$d</string>
    <string name="character_counter_overflowed_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d/%2$d</string>
    <string name="chip_text">Chip text</string>
    <string name="clear_text_end_icon_content_description">Clear text</string>
    <string name="date_picker_date_format">yyyy/MM/dd</string>
    <string name="date_picker_time_format">%02d</string>
    <string name="default_description">欢迎使用</string>
    <string name="default_title">默认标题</string>
    <string name="device_info_default">Unknown</string>
    <string name="doubao_assistant_title">DouBao Assistant</string>
    <string name="doubao_assistant_title_detail">DouBao Assistant is a product that supports information retrieval and service acquisition through text input, voice commands, and file uploads. To provide these services, this application (including AIAgent services and AI-operated mobile services) and its underlying services require internet connectivity during use and request access to the following permissions: recording audio, capturing photos and videos, reading and writing media data (such as photos, videos, and audio), accessing location information in both foreground and background, reading and editing calendar events, reading the device phone number, accessing contacts, retrieving the list of installed applications, reading call logs, accessing unique device identifiers (such as IMEI and MAC address), simulating clicks, reading screen content, scanning, connecting, and discovering Bluetooth devices, requesting notifications, and reading notification content.</string>
    <string name="error_icon_content_description">Error</string>
    <string name="exposed_dropdown_menu_content_description">Show dropdown menu</string>
    <string name="fab_transformation_scrim_behavior">com.google.android.material.transformation.FabTransformationScrimBehavior</string>
    <string name="fab_transformation_sheet_behavior">com.google.android.material.transformation.FabTransformationSheetBehavior</string>
    <string name="face_enrollment">Face Enrollment</string>
    <string name="face_enrollment_desc">Suggested</string>
    <string name="face_unlock_agreement">Statement on Facial Unlock</string>
    <string name="fingerprint_enrollment">Fingerprint Enrollment</string>
    <string name="finish_setup">Finish Setup</string>
    <string name="hide_bottom_view_on_scroll_behavior">com.google.android.material.behavior.HideBottomViewOnScrollBehavior</string>
    <string name="high_priority_notification">High Priority Notification</string>
    <string name="high_priority_notification_bluetooth">Connect Bluetooth to Report High Priority Notification</string>
    <string name="high_priority_notification_bluetooth_detail">When enabled, the assistant will read your high-priority notifications when the phone is locked and a Bluetooth device is connected. It can also listen to your replies and provide more interactive experiences.</string>
    <string name="more_detail">Details</string>
    <string name="oui_iv_back_desc">返回</string>
    <string name="oui_next">Go to next</string>
    <string name="password_enrollment">Password Enrollment</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="privacy_policy_sub">You should carefully read the Privacy Policy before use. Clicking Agree and Continue indicates that you have read and agreed to the foregoing content and the Policy.</string>
    <string name="user_agreement_title">Please read carefully</string>
    <string name="user_confirm_policy">Software License Agreement</string>
    <string name="user_confirm_policy_detail">"Welcome to the Ocean community! 
We provide you with functions such as posting, interaction, community activities, and membership benefits. 
When providing you with specific services, we may need to collect and use your relevant information: access the network to display application content, read the list of application software on the phone for account login. 
Based on your explicit authorization, we may read media audio and video data, read location information, read or write calendar information, and turn on the camera/microphone. When you use the aforementioned specific business functions, we will trigger information collection after asking for your authorization and consent, and you have the right to refuse authorization. 
We provide you with functions such as posting, interaction, community activities, and membership benefits. 
When providing you with specific services, we may need to collect and use your relevant information: access the network to display application content, read the list of application software on the phone for account login. 
Based on your explicit authorization, we may read media audio and video data, read location information, read or write calendar information, and turn on the camera/microphone. When you use the aforementioned specific business functions, we will trigger information collection after asking for your authorization and consent, and you have the right to refuse authorization."</string>
    <string name="user_confirm_policy_sub">You should carefully read the Software License Agreement before use. Clicking Agree and Continue indicates that you have read and agreed to the foregoing content and the Agreement.</string>
</resources>