<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <com.obric.oui.button.OButton android:layout_width="200.0dip" android:layout_margin="12.0dip" android:text="@string/activity_lock_screen" android:layout_alignParentTop="true" android:layout_centerHorizontal="true" style="@style/OButton.L1.Trans.Neutral" />
    <LinearLayout android:orientation="vertical" android:padding="16.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_centerInParent="true">
        <com.obric.oui.lisitem.OListItemCheck android:id="@id/face_enrollment" android:clickable="true" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="4.0dip" app:oui_list_item_subtitle="@string/face_enrollment_desc" app:oui_list_item_title="@string/face_enrollment" />
        <com.obric.oui.lisitem.OListItemCheck android:id="@id/fingerprint_enrollment" android:clickable="true" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="4.0dip" app:oui_list_item_title="@string/fingerprint_enrollment" />
        <com.obric.oui.lisitem.OListItemCheck android:id="@id/password_enrollment" android:clickable="true" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="4.0dip" app:oui_list_item_title="@string/password_enrollment" />
    </LinearLayout>
    <LinearLayout android:orientation="vertical" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_alignParentBottom="true" android:layout_centerHorizontal="true">
        <com.obric.oui.button.OButton android:id="@id/previous_btn" android:layout_width="200.0dip" android:layout_marginBottom="12.0dip" android:text="@string/oui_iv_back_desc" style="@style/OButton.L1.Standard.Primary" />
        <com.obric.oui.button.OButton android:id="@id/next_btn" android:layout_width="200.0dip" android:layout_marginBottom="12.0dip" android:text="@string/oui_next" style="@style/OButton.L1.Standard.Primary" />
    </LinearLayout>
</RelativeLayout>
