<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:paddingBottom="16.0dip" android:layout_width="fill_parent" android:layout_height="80.0dip" android:paddingHorizontal="16.0dip">
        <androidx.appcompat.widget.AppCompatTextView android:textSize="20.0sp" android:textStyle="bold" android:textColor="@color/oui_text_1" android:layout_gravity="center_horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/user_agreement_title" android:lineHeight="28.0dip" />
        <TextView android:textSize="24.0sp" android:textColor="@color/oui_text_1" android:ellipsize="middle" android:layout_gravity="center_horizontal" android:id="@id/agreement_sheet_subtitle" android:layout_width="wrap_content" android:layout_height="64.0dip" android:text="@string/user_confirm_policy" android:maxLines="1" android:lineHeight="34.0dip" android:textFontWeight="500" />
    </LinearLayout>
    <com.android.provision.widget.ObservableScrollView android:scrollbarStyle="outsideOverlay" android:id="@id/scroll_view" android:scrollbars="vertical" android:layout_width="wrap_content" android:layout_height="538.0dip" android:layout_marginBottom="20.0dip" android:fadeScrollbars="true" android:paddingHorizontal="20.0dip">
        <TextView android:textSize="14.0sp" android:textStyle="normal" android:textColor="@color/oui_text_3" android:layout_gravity="center_horizontal" android:id="@id/tv_user_agreement" android:paddingBottom="53.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/user_confirm_policy_detail" android:lineHeight="22.0dip" android:textFontWeight="400" />
    </com.android.provision.widget.ObservableScrollView>
</LinearLayout>
